# customer-agent-chatting-system-rust

./: Cargo.toml  README.md
.sqlx/: query-17691cd5d5fcae5749751526fe80b842f86cf7ad43c73515368c7751b0e00ab3.json  query-19ed079e1a4808f48b121dccaf8f24117ba888d9faa3ba937c0932a7b06f9648.json  query-237f83e0cd8ccda68952d0e804724e1f2886cb761ee962cb20dc1d217c937358.json
src/: lib.rs  main.rs
src/chat/: mod.rs
src/chat/agent/: agent.rs
src/chat/chatting/: chat_handler.rs  chat_room.rs  chat_service.rs  mod.rs  repository.rs
src/config/: app_state.rs  db.rs  error.rs  hash.rs  jwt.rs  mod.rs  session.rs
src/config/telemetry/: formatter.rs  middleware.rs  mod.rs  trace.rs
src/user/: handler.rs  mod.rs  repository.rs  service.rs  user.rs
