[package]
name = "axum-chatting-service"
version = "0.1.0"
edition = "2021"

[features]
dev = []
live = []

[dependencies]
axum = {version = "0.8.1", features = ["ws"]}
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }
reqwest = { version = "0.12.12", features = ["json"] }
axum-macros = "0.5.0"  # 명시적으로 버전 지정
uuid = { version = "1.12.0", features = ["v4", "serde"] }
futures = "0.3.31"


# 암호
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# 시간
chrono = { version = "0.4.39", features = ["serde"] }

# error
anyhow = "1.0.95"
thiserror = "2.0.11"

# 유틸
validator = "0.20.0"
validator_derive = "0.20.0"
bytes = "1.9.0"

dotenv = "0.15"
config = "0.15.5"
once_cell = "1.20.2"

# OpenTelemetry 코어
opentelemetry = { version = "0.27.1", features = ["metrics", "logs"]}
opentelemetry_sdk = { version = "0.27.1", features = ["logs", "metrics", "rt-tokio"] }
opentelemetry-http = "0.27.0"
opentelemetry-appender-tracing = { version = "0.27.0", default-features = false}
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic",  "reqwest-rustls",  "http-proto",  "tls", "metrics", "logs"] }  # traces feature 제거
opentelemetry-stdout = { version = "0.27.0", features = ["logs", "metrics"]}
http = "1.2.0"  # http 크레이트 추가
sysinfo = "0.33.1"
hostname = "0.4.0"

# 트레이싱 관련
tracing = {version = "0.1", features = ["std"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt", "json"] }
tracing-opentelemetry = "0.28.0"
tracing-appender = "0.2.3"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-bunyan-formatter = "0.3"
opentelemetry-semantic-conventions = "0.27"
reqwest-middleware = "0.4.0"
reqwest-tracing = "0.5.5" # Tracing 미들웨어
